--- a/index.html
+++ b/index.html
@@ -1,8 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" ng-app="ClothesShop">
 <head>
   <title></title>
   <meta charset="utf-8" />
+  <script src="bower_components/jquery/dist/jquery.js" type="text/javascript" charset="utf-8"></script>
+  <script src="bower_components/angular/angular.min.js" type="text/javascript" charset="utf-8"></script>
+  <script src="bower_components/angular-resource/angular-resource.min.js" type="text/javascript" charset="utf-8"></script>
+  <script src="bower_components/bootstrap/dist/js/bootstrap.js" type="text/javascript" charset="utf-8"></script>
+  <script src="js/app.js" type="text/javascript" charset="utf-8"></script>
+  <link rel="stylesheet" href="./bower_components/bootstrap/dist/css" type="text/css" media="all" />
 </head>
 <body>
   <header>
