--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="ClothesShop">
+<html lang="en" ng-app="clothesShop">
 <head>
   <title></title>
   <meta charset="utf-8" />
@@ -7,7 +7,6 @@
   <script src="bower_components/angular/angular.min.js" type="text/javascript" charset="utf-8"></script>
   <script src="bower_components/angular-resource/angular-resource.min.js" type="text/javascript" charset="utf-8"></script>
   <script src="bower_components/bootstrap/dist/js/bootstrap.js" type="text/javascript" charset="utf-8"></script>
-  <script src="bower_components/require/build/require.js" type="text/javascript" charset=""></script>
   <script src="js/app.js" type="text/javascript" charset="utf-8"></script>
   <script src="js/productsController.js"></script>
   <link rel="stylesheet" href="./bower_components/bootstrap/dist/css/bootstrap.css" type="text/css" media="all" />
