--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
   <title></title>
   <meta charset="utf-8" />
   <script src="bower_components/jquery/dist/jquery.js" type="text/javascript" charset="utf-8"></script>
-  <script src="bower_components/angular/angular.min.js" type="text/javascript" charset="utf-8"></script>
-  <script src="bower_components/angular-resource/angular-resource.min.js" type="text/javascript" charset="utf-8"></script>
+  <script src="bower_components/angular/angular.js" type="text/javascript" charset="utf-8"></script>
+  <script src="bower_components/angular-resource/angular-resource.js" type="text/javascript" charset="utf-8"></script>
+  <script src="bower_components/angular-route/angular-route.js" type="text/javascript" charset="utf-8"></script>
   <script src="bower_components/bootstrap/dist/js/bootstrap.js" type="text/javascript" charset="utf-8"></script>
   <script src="js/app.js" type="text/javascript" charset="utf-8"></script>
   <script src="js/productsController.js"></script>
