--- a/index.html
+++ b/index.html
@@ -25,28 +25,28 @@
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
           <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Category<span class="caret"></span></a>
+          <a  class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Category<span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
             <li>
-              <a href="#" ng-click='productFilter = ""'>All</a>
+              <a  ng-click='productFilter = ""'>All</a>
             </li>
             <li>
-              <a href="#" ng-click='productFilter = "Womens Footwear"'>Women's Footwear</a>
+              <a ng-click='productFilter = "Womens Footwear"'>Women's Footwear</a>
             </li>
             <li>
-              <a id="mensfootwear" href="#" ng-click='productFilter = "Mens Footwear"'>Men's Footwear</a>
+              <a ng-click='productFilter = "Mens Footwear"'>Men's Footwear</a>
             </li>
             <li>
-              <a href="#" ng-click='productFilter = "Womens Casualwear"'>Women's Casualwear</a>
+              <a ng-click='productFilter = "Womens Casualwear"'>Women's Casualwear</a>
             </li>
             <li>
-              <a href="#" ng-click='productFilter = "Mens Casualwear"'>Men's Casualwear</a>
+              <a ng-click='productFilter = "Mens Casualwear"'>Men's Casualwear</a>
             </li>
             <li>
-              <a href="#" ng-click='productFilter = "Womens Casualwear"'>Women's Formalwear</a>
+              <a ng-click='productFilter = "Womens Casualwear"'>Women's Formalwear</a>
             </li>
             <li>
-              <a href="#" ng-click='productFilter = "Mens Casualwear"'>Men's Formalwear</a>
+              <a ng-click='productFilter = "Mens Casualwear"'>Men's Formalwear</a>
             </li>
           </ul>
           </li>
@@ -54,15 +54,7 @@
       </nav>
       </div>
     </header>
-    <ul class="listgroup" ng-repeat="product in searchResults.products | filter : {'category':productFilter} : (productFilter == '' ? false : true) ">
-      <li>
-      <h3>{{product.name}}</h3>
-      {{console.log(product)}}
-      <p>category: {{product.category}}</p>
-      <p>price: £{{product.price}}</p>
-      <p>{{product.stock}} in stock</p>
-      </li>
-    </ul>
+    <div ng-view></div>
     <footer>
 
     </footer>
