--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
             </li>
           </ul>
           </li>
+          <ul class="nav navbar-nav navbar-right">
+          <li><a href="#/cart">Shopping Cart</a></li>
+          </ul>
         </div>
       </nav>
       </div>
