successfully refactors out the shopping cart service into another file

--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
   <script src="bower_components/angular-resource/angular-resource.js" type="text/javascript" charset="utf-8"></script>
   <script src="bower_components/angular-route/angular-route.js" type="text/javascript" charset="utf-8"></script>
   <script src="bower_components/bootstrap/dist/js/bootstrap.js" type="text/javascript" charset="utf-8"></script>
-  <script src="js/app.js" type="text/javascript" charset="utf-8"></script>
+  <script src="js/app.js" type="text/javascript" charset="utf-9"></script>
   <script src="js/productsController.js"></script>
+  <script src="js/services/shopService.js"></script>
   <link rel="stylesheet" href="./bower_components/bootstrap/dist/css/bootstrap.css" type="text/css" media="all" />
   <link rel="stylesheet" href="./bower_components/bootstrap/dist/css/bootstrap-theme.css" type="text/css" media="all" />
 
