--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <div class="container-fluid">
       <nav class="navbar navbar-default">
         <div class="navbar-header">
-          <a class="navbar-brand" href="#">Clothes Shop</a>
+          <a class="navbar-brand" href="#/products">Clothes Shop</a>
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
